chore: remove unnecessary methods and fix coding style